# BathGuardian

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/: copilot-instructions.md
documents/: BathGuardian-Presentation.pptx  SystemArchitecture.txt
main/: CMakeLists.txt  DHT11.c  DHT11.h  MQ135.c  MQ135.h  app_nvs.c  app_nvs.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  tasks_common.h  wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  index.html
